fixed measurements on small devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ body {
 h1 {
   color: white;
   text-align: center;
-  margin: 1rem;
+  margin: 0.5rem;
 }
 
 .box {
@@ -31,7 +31,7 @@ h1 {
 
 .radio {
   color: white;
-  margin: 0.4rem;
+  margin: 0.2rem;
   text-decoration: none;
 }
 
@@ -45,7 +45,7 @@ form {
 }
 
 .list {
-  margin: 2rem;
+  margin: 1rem;
   border: solid 2px white;
   width: 100%;
   max-width: 40rem;
@@ -55,7 +55,7 @@ form {
 }
 
 .list__box {
-  padding: 0.6rem 0;
+  padding: 0.3rem 0;
   background-color: rgb(212, 215, 227);
   border-bottom: solid 0.1rem;
 }
@@ -67,13 +67,14 @@ form {
 .food-list {
   display: flex;
   justify-content: space-between;
-  gap: 2rem;
+  gap: 0.5rem;
   padding: 0.2rem;
-  margin: 1rem 2rem;
+  margin: 0.5rem 1rem;
 }
 
 .food-list__name {
   text-transform: uppercase;
+  font-size: medium;
   padding: 0 1rem;
   margin: auto;
 }
